# clean-fastapi-trello-clone

./: .gitignore  README.md  alembic.ini  board-repo-test.json  mariadb-manual-start.sh  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 3906f321381c_.py  3937e026f7da_.py  4f72b034f0ae_.py  53fefaa36bd9_.py  698f2081bc10_.py  9dee491b99fc_.py  bb2c28f025f3_.py
src/: app.py  setup.py
src/api/v1/: provider.py  router.py
src/api/v1/endpoints/: auth_router.py  board_router.py  cabinet_route.py  card_router.py  todo_router.py  user_route.py
src/api/v1/resource/: prefixes.py  tags.py
src/configs/: settings.py
src/core/: base_repo.py  base_service.py  constants.py  exceptions.py  generics.py  security.py
src/core/logger/: logger_test.py  middleware_logger.py
src/core/utils/: auto_unwrap.py  exception_handler.py  helpers.py  token.py  translator.py
src/database/: main.py
src/domains/: auth.py  board.py  cabinet.py  card.py  task.py  todo.py  user.py
src/repository/adapters/: auth_repo.py  base_sql_repo.py  board_repo.py  cabinet_repo.py  card_repo.py  task_repo.py  todo_repo.py  user_repo.py
src/repository/adapters/mocks/: json_board_repo.py
src/repository/model/: auth.py  board.py  board_old.py  cabinet.py  card.py  todo.py  user.py
src/repository/protocols/: auth_repo_meta.py  board_repo_meta.py  cabinet_repo_meta.py  card_repo_meta.py  task_repo_meta.py  todo_repo_meta.py  user_repo_meta.py
src/schemas/: auth.py  base_crud.py  board.py  cabinet.py  card.py  todo.py  user.py
src/services/: auth_services.py  board_services.py  board_services_old.py  cabinet_services.py  card_services.py  task_services.py  todo_services.py  user_services.py
src/services/__pycache__/: auth_service.py
tests/: ad_hoc_testing_script.py  test_core.py  test_repo_meta.py
