[tool.poetry]
name = "mini-jrello-server"
version = "0.1.0"
description = ""
authors = ["lusamreth <somrethoverkill@gmail.com>"]
readme = "README.md"
packages = [{include = "src"},{ include = "services", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "^0.103.2"
sqlalchemy = "^2.0.18"
mysqlclient = "^2.2.0"
bcrypt = "^4.0.1"
pyjwt = "^2.8.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
pydantic-settings = "^2.0.3"
pycryptodomex = "^3.19.0"
oslash = "^0.6.3"
alembic = "^1.12.1"
structlog = "^23.2.0"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.app:main"
adhoc-test = "tests.ad_hoc_testing_script:main"

